# MAD.Prefect

./: .cz.toml  .gitignore  AGENTS.md  CHANGELOG.md  Pipfile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: prepare-stable-release.yml  publish.yml  release.yml
docs/: asset-manifest.md  data-asset-attribute-formatting.md  data-asset-cache-first.md  data-asset-mad-protocol.md  release-flow.md
mad_prefect/: data_assets.py  duckdb.py  envblock.py  filesystems.py  requests.py
mad_prefect/data_assets/: __init__.py  asset_decorator.py  asset_metadata.py  asset_template_formatter.py  data_artifact.py  data_artifact_collector.py  data_artifact_query.py  data_asset.py  data_asset_callable.py  data_asset_options.py  data_asset_run.py  options.py  readme.md  utils.py
mad_prefect/data_assets/configurators/: __init__.py  fluent_data_asset_configurator.py
mad_prefect/data_assets/data_hydra/: __init__.py  data_hydra.py  data_hydra_artifact.py  data_hydra_context_factory.py  data_hydra_head.py  data_hydra_head_factory.py  data_hydra_module.py  data_hydra_neck.py  data_hydra_run.py  data_hydra_runner.py  types.py  utils.py
mad_prefect/json/: mad_json_encoder.py
mad_prefect/runner/: storage.py
mad_prefect/utils/: nested_structures.py  sql.py
scripts/: publish
tests/: create_sample.py  sample2.parquet  test_breakout.py  test_data_asset.py  test_data_asset_2.py  test_duckdb.py  test_env_block.py  test_mock_api.py
tests/bronze/nested_structures/: address.parquet  contact_details.parquet  hobbies.parquet  sample3.parquet  sample_json.json
tests/data_assets/: test_artifacts.py  test_asset_metadata.py  test_asset_template_formatter.py  test_asset_template_formatting_on_initialization.py  test_bound_arguments.py  test_cache_first.py  test_caching.py  test_data_asset.py  test_data_asset_materialization.py  test_data_hydra.py  test_paths.py
tests/data_assets/configurators/: test_fluent_data_asset_configurator.py
tests/data_assets/data_hydra/: test_data_hydra.py  test_data_hydra_neck.py
tests/data_assets/sample_data/: mock_api.py
tests/mad_data_test/dw/: __init__.py  (+2 more)
tests/raw/: organisations.json
tests/sample_data/: data_gen.py  mock_api.py
tests/synthetic_data/: data_gen.py
(+11 files in other folders)
