[tool.poetry]
name = "mad-prefect"
version = "0.1.0"
description = ""
authors = ["Maitland Marshall <maitland@mait.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
prefect = ">=2.18,<3"
pandas = "^2.1.1"
sshfs = "^2024.6.0"
fsspec = "^2024.9.0"
duckdb = ">=0.9, <1.2"
pyarrow = "^17.0.0"
jsonlines = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ipykernel = "^6.29.4"
faker = "^27.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
