[tool.poetry]
name = "mad-prefect"
version = "2.3.0rc12"
description = ""
authors = ["MAIT DEV Pty Ltd <maitland@mait.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prefect = ">=2.18,<3.5"
pandas = "^2.1.1"
sshfs = "^2024.6.0"
fsspec = "^2025.9.0"
duckdb = ">=0.9, <1.5"
pyarrow = ">=16.0.0"
jsonlines = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ipykernel = "^6.29.4"
faker = "^27.0.0"
commitizen = "^3.29.1"
pyright = "^1.1.406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
changelog_merge_prerelease = true